Fixes z-index for areas selector

--- a/public/scss/buttons.scss
+++ b/public/scss/buttons.scss
@@ -477,7 +477,7 @@ Editing forms
 ========================================================================== */
 
 #container article.editable .inner .left  {
-  z-index:2000;
+  z-index:500;
 }
 
 form.editable,
